# ClosingGL

./: CMakeLists.txt  README.md
cmake/: CMakeFunctions.txt
lib/: CMakeLists.txt
lib/binary/: glfw3.lib
lib/include/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
